--- a/.config
+++ b/.config
@@ -5180,7 +5180,8 @@ CONFIG_ZERO_CALL_USED_REGS=y
 # Bounds checking
 #
 # CONFIG_FORTIFY_SOURCE is not set
-# CONFIG_HARDENED_USERCOPY is not set
+CONFIG_HARDENED_USERCOPY=y
+CONFIG_HARDENED_USERCOPY_DEFAULT_ON=y
 # end of Bounds checking
 
 #
